# TClator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Form1.Designer.cs  Form1.cs  Program.cs  README.md  TClator.sln  WinTools.csproj  WinTools.sln  toys.sln
Properties/: AssemblyInfo.cs
TClator/: App.cs  Calculator.cs  Form1.Designer.cs  Form1.cs  Form1.resx  FormMain.Designer.cs  FormMain.cs  FormMain.resx  FormYoudao.Designer.cs  FormYoudao.cs  FormYoudao.resx  Program.cs  TClator.csproj  Translator.cs
TClator/Properties/: AssemblyInfo.cs  Settings.Designer.cs
Toys.Client/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Toys.Client.csproj
Toys.Client/Models/: Entry.cs  SearchHistory.cs  Setting.cs  YoudaoSetting.cs
Toys.Client/Services/: ICalculateService.cs  ISearchService.cs  ITranslateService.cs  NaiveCalculateService.cs  SearchService.cs  ServiceManager.cs  SettingServices.cs  WindowsIndexSearchSearvice.cs  WindowsIndexSearchService.cs  WindowsSearchSearvice.cs  WindowsSearchService.cs  YoudaoSettingService.cs  YoudaoTranslateService.cs
Toys.Client/ViewModels/: MainWindowViewModel.cs  TranslateResultDetailViewModel.cs  YoudaoSettingViewModel.cs
Toys.Client/Views/: MainWindow.xaml  MainWindow.xaml.cs  ResultDetailView.xaml  ResultDetailView.xaml.cs  TranslateResultDetailView.xaml  TranslateResultDetailView.xaml.cs  YoudaoSettingView.xaml  YoudaoSettingView.xaml.cs
modules/: modules.vcxproj  modules.vcxproj.filters  tclator.cpp  tclator.h
modules/src/: CMakeLists.txt  Translator.cs  base.h  cache.h  calculator.h  lru_cache.h  port.cpp  tclator.cpp  tclator.h  translator.cpp  translator.h
modules/test/: CMakeLists.txt
modules/tests/: CMakeLists.txt  calculator_test.cpp  tclator_test.cpp  translator_test.cpp
runner/: App.cs  Calculator.cs  FormMain.Designer.cs  FormMain.cs  FormMain.resx  FormYoudao.Designer.cs  FormYoudao.cs  SystemHotKey.cs  runner.csproj
runner/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
